--- a/task-list/src/app/components/header/header.component.html
+++ b/task-list/src/app/components/header/header.component.html
@@ -1,1 +1,6 @@
+<header>    
 <h1>{{title}}</h1>
+<app-button color="green" text="Add Text Pls"
+(btnClick)="toggleAddTask()"
+></app-button>
+</header>
